k8s/website/backend/base/deployment.yaml
---
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: gofiber
    app.kubernetes.io/name: gofiber
    app.kubernetes.io/part-of: professional-website
  name: gofiber
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: gofiber
      app.kubernetes.io/name: gofiber
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backend
        app.kubernetes.io/instance: gofiber
        app.kubernetes.io/name: gofiber
    spec:
      containers:
        - name: gofiber
          image: vandercycle/professional-website-backend:latest
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              memory: 256Mi
          ports:
            - name: http
              containerPort: 5000
