k8s/website/backend/base/service.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: gofiber
    app.kubernetes.io/name: gofiber
    app.kubernetes.io/part-of: professional-website
  name: gofiber
spec:
  selector:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: gofiber
    app.kubernetes.io/name: gofiber
  # type: ClusterIP
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 5000
      nodePort: 30500
      # targetPort: http
